# ai-cost-modeler

./: .env.example  .gitignore  CHERNY_VALIDATION.md  PLAN.md  README.md  pyproject.toml
costmodel/: __init__.py  cli.py  comparator.py  estimator.py  ledger.py  models.py  pricing.py  reporter.py
costmodel/architectures/: __init__.py  presets.py
costmodel/integrations/: __init__.py  anthropic_sdk.py
examples/: my-arch.yaml
scripts/: run_cherny_validation.py
tests/: test_anthropic_sdk.py  test_architecture_presets.py  test_estimator.py  test_ledger.py  test_pricing.py
